[package]
name = "rigatoni"
version = "0.1.0"
edition = "2021"

[dependencies]
serde_json = "1.0.132"
reqwest = { version = "0.12.9", features = ["json"] }
serde = { version = "1.0.214", features = ["derive"] }
anyhow = "1.0.92"
thiserror = "2.0.3"
tokio = { version = "1.41.0", features = ["full"] } 

